--- a/views/author_form.pug
+++ b/views/author_form.pug
@@ -12,8 +12,10 @@ block content
     div.form-group
       label(for='date_of_birth') Date of birth:
       input#date_of_birth.form-control(type='date' name='date_of_birth' value=(undefined===author ? '' : author.date_of_birth) )
-    button.btn.btn-primary(type='submit') Submit
-  if errors
-    ul
-      for error in errors
-        li!= error.msg
+      label(for='date_of_birth') Date of death:
+      input#date_of_birth.form-control(type='date' name='date_of_death' value=(undefined===author ? '' : author.date_of_death) )
+      button.btn.btn-primary(type='submit') Submit
+      if errors
+        ul
+        for error in errors
+          li!= error.msg
